<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright 2004 The Apache Software Foundation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Developed by : Sandeep Soni [ http://sonisandeep.blogspot.com, 
    			      Email : Sandeep.Soni at yahoo.com 
    			    ]
 -->
<resources>
    <string name="CreateAccountScreenTitle">Create Account</string>
    <string name="CreateAccount">Create Account</string>
    <string name="OK">Ok</string>
    
    <string name="app_name">PDiary</string>
	<string name="Previous">Previous</string>
	<string name="Next">Next</string>


	<string name="LoginScreenTitle">Create Account or Login</string>
	<string name="LabelAvatarName">Avatar Name :</string>
	<string name="LabelAvatarPassword">Password :</string>
	<string name="menu_new">New Note</string>
	<string name="menu_edit">Edit Note</string>
    <string name="menu_start">Go To Start Note</string>
    <string name="menu_recent">List All Notes</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_export">Export Notes</string>
    <string name="menu_import">Import Notes</string>
    <string name="menu_about">About PDiary</string>
    <string name="menu_email">Mail Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="pickDate">Choose Date</string>
</resources>
