<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright 2004 The Apache Software Foundation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Developed by : Sandeep Soni [ http://sonisandeep.blogspot.com, 
    			      Email : Sandeep.Soni at yahoo.com 
    			    ]
 -->
<TableLayout android:id="@+id/TableLayout01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<TableRow android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/TableRow00">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/labelLoginScreenTitle"
			android:layout_gravity="center_vertical|center_horizontal"
			android:layout_span="2" android:text="@string/CreateAccountScreenTitle">
		</TextView>
	</TableRow>
	<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/labelAvatar" android:text="@string/LabelAvatarName"></TextView>
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/avatarName" android:editable="true"></EditText>
	</TableRow>
	<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/labelPassword" android:text="@string/LabelAvatarPassword"></TextView>
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/avatarPassword" android:editable="true" android:password="true" android:text="......"></EditText>
	</TableRow>
	<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ButtonCreate" android:text="@string/CreateAccount"></Button>
	</TableRow>

<TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content" android:layout_height="wrap_content">
</TableRow>
</TableLayout>